--- a/stylecv.css
+++ b/stylecv.css
@@ -1,8 +1,8 @@
 body {
     font-size: 30px;
-    background-color: rgb(193, 193, 235);
-    background-image: url("wallpaperhome.jpg");
-    font-family: "Audiowide", sans-serif;
+    
+    background: linear-gradient(to left, rgba(186, 186, 186, 0.985), rgba(87, 80, 80, 0.874));
+    font-family: "Verdana", sans-serif;
     color: white;
     
     /*background-repeat: repeat-x;*/
@@ -12,7 +12,7 @@ html, body {
     scroll-behavior: smooth
 }
 pre{
-    font-family: "Audiowide", sans-serif;
+    font-family: "Verdana", sans-serif;
 }
 
 .navbar {
@@ -120,15 +120,15 @@ div.gallery img {
 
 
 .boxmedia{
-    height: 120px;
-    width: 520px;
+    height: 40px;
+    width: 330px;
     border: 1px solid #000000;
     background-color: #ffffff;
     border-radius: 5px;
     color: black;
-    margin: 30px 100px 0px 30px;
+    margin: 25px 100px 0px 5px;
     padding: 30px;
-    font-size: 25px;
+    font-size: 18px;
     text-align: justify;
     
 }
@@ -175,7 +175,7 @@ input[type=text], input[type=email]{
     margin-left: 20px;
 }
 
-input.description[type=text] {
+input.description[type=text],input.email[type=email], input.namecontact[type=text] {
     width: 180px;
     box-sizing: border-box;
     border: 2px solid #ccc;
@@ -189,12 +189,36 @@ input.description[type=text] {
     margin-left: 20px;
 }
 
-input.description[type=text]:focus {
-    width: 80%;
+input.email[type=email] {
+    width: 180px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    transition: width 0.4s ease-in-out;
+    margin-left: 20px;
 }
 
+
+input.description[type=text]:focus {
+    width: 63%;
+}
+
+input.namecontact[type=text]:focus {
+    width: 20%;
+}
+
+input.email[type=email]:focus {
+    width: 30%;
+}
+
+
 button.send {
-    font-family: "Audiowide", sans-serif;
+    font-family: "Verdana", sans-serif;
     height: 50px;
     width: 180px;
     background-color: #ffffff;
@@ -207,10 +231,35 @@ button.send:hover {
     cursor: pointer;
 }
 
+
+
+.boxcontact{
+    height: 20px;
+    background-color: #000000;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    margin: 25px 100px 0px 10px;
+    padding: 15px;
+    font-size: 18px;
+    text-align: left;
+    
+}
+
+.boxcontact:hover .triangle-right {
+	transition: 0.1s;
+    width: 0;
+	height: 0;
+	border-top: 26px solid transparent;
+	border-left: 30px solid #000000;
+	border-bottom: 26px solid transparent;
+    border-radius: 5px;
+    cursor:default;
+}
+
 /* Experience */
 
 button.PDFversion{
-    font-family: "Audiowide", sans-serif;
+    font-family: "Verdana", sans-serif;
     height: 35px;
     width: 110px;
     background-color: #ffffff;
@@ -251,9 +300,8 @@ img.clipped{
 
 img.imageCV {
     display: none;
-    position: absolute;
-    top: 500px;
-    left: 700px;
+    position:relative; 
+    margin-left: 700px;
 
 }
 
@@ -264,12 +312,13 @@ div.clipped{
 
 div.imageCV {
     display: none;
-    position: absolute;
-    top: 130px;
-    left: 700px;
+    display: none;
+    position:relative; 
+    margin-left: 720px;
+    margin-top: 50px;
     background-color:white;
     border-radius: 20px;
-    margin-right: 20px;
+    margin-right: 10px;
     padding: 10px;
 }
 
@@ -341,7 +390,7 @@ div.imageskills{
     display: none;
     position: absolute;
     top: 100px;
-    left: 500px;
+    left: 270px;
     background-color: white;
     border-radius: 20px;
     height: 350px;
@@ -362,28 +411,29 @@ img.PDFversion{
 /* About me */
 
 .aboutmebox{
-    display: inline-block;
     height: 30px;
     width: 250px;
     border: 1px solid #000000;
     background-color: #ffffff;
     border-radius: 5px;
     color: black;
-    margin: 70px 120px 0px 180px;
     padding: 10px;
     font-size: 22px;
-    text-align: center;
+    /* text-align: center; */
     transition: transform 1s;
+    margin: 0 auto;
+    
+    
 }
 
 .aboutmebox:hover{
     border-color: #000000;
     cursor: pointer;
-    margin: 20px;
     width: auto;
     height: auto;
-    transform: scale(1.05);
-    
+    transform: scale(1.1); 
+    position: absolute; 
+    z-index: 1000;
 
 }
 
@@ -391,20 +441,54 @@ img.PDFversion{
     display: none;
     color: black;
     font-size: 15px;
+
+}
+.titleaboutmechildline {
+    transition: transform 0.2s;
+}
+.titleaboutmechild1 {
+    transition: transform 0.2s;
+}
+.titleaboutmechild2 {
+    transition: transform 0.2s;
+}
+
+.titleaboutmeparent:hover .titleaboutmechildline { 
+    transform: rotate(-90deg); 
+    position: relative;
+    top: 240px;
+    left:-50px;
+    
+}
+
+.titleaboutmeparent:hover .titleaboutmechild1 { 
+    transform: rotate(-90deg);
+    position: relative;
+    top: 80px;
+    left: 420px;
+    
+
+}
+
+.titleaboutmeparent:hover .titleaboutmechild2 { 
+    transform: rotate(-90deg);
+    position: relative;
+    top: 380px;
+    left: 10px;
 }
 
 /* Intro */
 
 .introbox{
-    height: 75px;
-    width: 600px;
+    height: 50px;
+    width: 400px;
     border: 1px solid #000000;
     background-color: #ffffff;
     border-radius: 5px;
     color: black;
-    margin: 40px 100px 0px 100px;
-    padding: 30px;
-    font-size: 30px;
+    margin: 20px 50px 0px 30px;
+    padding: 20px 20px 20px 20px;
+    font-size: 25px;
     text-align: left;
     
 }
@@ -420,10 +504,10 @@ img.PDFversion{
 .welcome{
     position:absolute;
     top: 120px;
-    left: 950px;
+    left: 530px;
     height: 200px;
-    width: 830px;
-    font-size: 30px;
-    text-align: justify;
+    width: 700px;
+    font-size: 25px;
+    text-align: center;
     
 }
